--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@
         <p>
             Uno dei principali fattori che contribuiscono all'inquinamento causato dalla tecnologia è l'obsolescenza
             programmata, ovvero la produzione di prodotti tecnologici che diventano obsoleti dopo un breve periodo di
-            tempo, spingendo i consumatori ad acquistare nuovi prodotti. Ciò porta alla produzione di rifiuti
-            elettronici, che possono essere dannosi per la salute e l'ambiente se non smaltiti correttamente.
+            tempo, spingendo i consumatori ad acquistare nuovi prodotti. Altri fattori che analizzeremo sono
+            l'addestramento delle IA e il riciclo dell'hardware.
         </p>
         <p>
-            Tuttavia, ci sono anche molti modi per ridurre il proprio impatto ambientale. Ad esempio, si può utilizzare
+            La veloce crescità delle IA ha portato benefici nella vita di tutti i giorni ma i consumi di risorse e di
+            energia dovuti al loro addrestramento è in costante aumento. L'hardware deve essere smaltito correttamente
+            e, se è possibile, riutilizzato o riciclarlo.
+        </p>
+        <p>
+            Ci sono molti modi per ridurre il proprio impatto ambientale. Ad esempio, si può utilizzare
             l'hardware per un periodo di tempo più lungo e riciclarlo correttamente alla fine della sua vita utile.
             Inoltre, si può scegliere di acquistare prodotti tecnologici più sostenibili, che siano prodotti con
             materiali riciclabili e/o che durino più a lungo.
@@ -87,7 +92,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
@@ -96,7 +101,8 @@
                 <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i
                             class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
             </ul>
-            <p class="text-center text-body-secondary"><i class="fa fa-user me-1" aria-hidden="true"></i>Aiello Giuseppe 4DI a.s. 2022/23</p>
+            <p class="text-center text-body-secondary"><i class="fa fa-user me-1" aria-hidden="true"></i>Aiello Giuseppe
+                4DI a.s. 2022/23</p>
             <p class="text-center text-body-secondary">giuseppe.2006@outlook.com</p>
         </div>
     </footer>
