--- a/room1.html
+++ b/room1.html
@@ -76,13 +76,19 @@
                 </tr>
             </tbody>
         </table>
-        <select class="form-select form-select-lg mt-5" aria-label="Default select example" id="passcodeInput">
+        <div>
+            <img src="images/error.png" class="error" id="error" hidden>
+        </div>
+        <select class="form-select form-select-lg mt-3" aria-label="Default select example" id="passcodeInput">
             <option value="1" selected>A</option>
             <option value="2">B</option>
             <option value="3">C</option>
             <option value="4">D</option>
         </select>
         <button type="button" class="btn btn-primary mt-4" id="checkInput">Enter</button>
+        <div class="immagine mt-5">
+            <img src="images/server.jfif" style="width: 50%;height: 50%;">
+        </div>
     </div>
 
 
@@ -98,7 +104,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
