--- a/room3.html
+++ b/room3.html
@@ -56,11 +56,17 @@
     <div class="content container">
         <h1>Quiz Livello 3</h1>
         <p>Inserisci le risposte per andare alla prossimo livello:</p>
-        <p class="mt-5">Cambiare i propri dispositivi elettronici con frequenza può avere un impatto negativo sull'ambiente, ma il riciclo dell'hardware può aiutare a...</p>
-        <div class="input-group">
+        <p class="mt-5">Una delle principali conseguenze dell'obsolescenza programmata è la riduzione della ______ dei prodotti.</p>
+        <div>
+            <img src="images/error.png" class="error" id="error" hidden>
+        </div>
+        <div class="input-group mt-3">
             <input type="text" class="form-control" id="passcodeInput">
         </div>
         <button type="button" class="btn btn-primary mt-4" id="checkInput">Enter</button>
+        <div class="immagine mt-5">
+            <img src="images/obsolescenza.png">
+        </div>
     </div>
 
 
@@ -76,7 +82,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
