--- a/room4.html
+++ b/room4.html
@@ -57,7 +57,10 @@
         <h1>Quiz Livello 4</h1>
         <p>Inserisci le risposte per andare alla prossimo livello:</p>
         <p class="mt-5">Ordina le fonti di inquinamento:<br>(1=poco inquinante, 5=molto inquinante)</p>
-        <table class="table text-center tabella table-responsive">
+        <div>
+            <img src="images/error.png" class="error" id="error" hidden>
+        </div>
+        <table class="table text-center tabella table-responsive mt-3">
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -135,7 +138,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
