--- a/riciclo.html
+++ b/riciclo.html
@@ -111,7 +111,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
