--- a/room2.html
+++ b/room2.html
@@ -60,32 +60,35 @@
 
     <div class="content container">
         <h3>Quali di questi materiali è usato nei cellulari, che se non smaltiti correttamente danneggiano l'ambiente?</h3>
-        <div class="mt-3"> <!-- aggiunta della classe "text-center" -->
-            <div class="form-check">
-                <input class="form-check-input" style="align-self: center;" type="checkbox" value="" id="check1">
+        <div>
+            <img src="images/error.png" class="error" id="error" hidden>
+        </div>
+        <div class="mt-3">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="" id="check1">
                 <label class="form-check-label" for="defaultCheck1">
                     Legno
                 </label>
             </div>
-            <div class="form-check">
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" value="" id="check2">
                 <label class="form-check-label" for="defaultCheck1">
                     Plastica
                 </label>
             </div>
-            <div class="form-check">
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" value="" id="check3">
                 <label class="form-check-label" for="defaultCheck1">
                     Ceramica
                 </label>
             </div>
-            <div class="form-check">
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" value="" id="check4">
                 <label class="form-check-label" for="defaultCheck1">
-                    Rame
+                    Cobalto
                 </label>
             </div>
-            <div class="form-check">
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" value="" id="check5">
                 <label class="form-check-label" for="defaultCheck1">
                     Litio
@@ -93,7 +96,9 @@
             </div>
         </div>
         <button type="button" class="btn btn-primary mt-4" id="checkInput">Enter</button>
-
+        <div class="immagine">
+            <img src="images/nokia.png">
+        </div>
     </div> 
 
 
@@ -109,7 +114,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
