--- a/secret.html
+++ b/secret.html
@@ -7,9 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="./style/style.css" rel="stylesheet">
-    <link href="./style/secret.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
     <title>INDEX</title>
 </head>
@@ -49,8 +48,42 @@
         </div>
     </nav>
 
-    <div class="content">
-        <h1>Ecco le mie riflessioni personali:</h1>
+    <div class="container content">
+
+        <h1>Complimenti, hai i biscotti!<br>Ecco le mie riflessioni personali</h1>
+
+        <div class="content">
+            <h3>Obsolescenza informatica:</h3>
+            <p>
+                Spesso siamo attratti dalle nuove tecnologie e ci sentiamo costretti a sostituire i
+                nostri dispositivi per rimanere al passo con i tempi, ma questo comporta un grave impatto ambientale. Ho
+                imparato a essere più consapevole dei miei acquisti e a cercare di utilizzare i dispositivi il più a
+                lungo
+                possibile, non per risparmiare denaro, ma per ridurre l'impatto sulla natura.
+            </p>
+        </div>
+        <div class="content">
+            <h3>Addestramento IA:</h3>
+            <p>
+                Mi preoccupo sempre di più dell'impatto ambientale dell'addestramento delle IA. L'elaborazione dei dati
+                richiede una grande quantità di energia e, le grandi quantità di dati necessarie per addestrare le IA
+                richiedono spesso server e data center enormi, che hanno un forte impatto ambientale. Inoltre, molti dei
+                dispositivi utilizzati per l'addestramento delle IA non sono progettati per essere sostenibili. Come
+                società, dobbiamo cercare di sviluppare nuove tecnologie che siano sostenibili e cercare di limitare
+                l'impatto ambientale dell'addestramento delle IA, visto che al giorno d'oggi diventano sempre più usate.
+            </p>
+        </div>
+        <div class="content">
+            <h3>Riciclo dell'hardware:</h3>
+            <p>
+                Il riciclo dell'hardware è un modo importante per ridurre l'impatto ambientale dei nostri consumi
+                tecnologici. Personalmente, cerco sempre di riciclare i miei dispositivi elettronici quando non li uso più,
+                dandogli una nuova vita. Inoltre, scelgo prodotti di qualità che durino a lungo, per
+                cercare di non sostituirli troppo frequentemente. Il riciclo dell'hardware è un passo importante per
+                ridurre l'impatto ambientale dei nostri consumi tecnologici e tutti dobbiamo fare la nostra parte per
+                proteggere il pianeta.
+            </p>
+        </div>
     </div>
 
 
@@ -62,7 +95,7 @@
                 <li class="nav-item"><a href="https://www.instagram.com/_giuseppe.aiello_/"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-instagram me-1"
                             aria-hidden="true"></i>Instagram</a></li>
-                <li class="nav-item"><a href="https://github.com/Highlander200"
+                <li class="nav-item"><a href="https://github.com/Highlander200/EdCivica"
                         class="nav-link px-2 text-body-secondary"><i class="fa fa-github me-1"
                             aria-hidden="true"></i>GitHub</a></li>
                 <li class="nav-item"><a href="https://www.ittgiorgi.edu.it/"
@@ -71,7 +104,8 @@
                 <li class="nav-item"><a href="source.zip" class="nav-link px-2 text-body-secondary"><i
                             class="fa fa-file-code-o me-1" aria-hidden="true"></i>Sorgente</a></li>
             </ul>
-            <p class="text-center text-body-secondary"><i class="fa fa-user me-1" aria-hidden="true"></i>Aiello Giuseppe 4DI a.s. 2022/23</p>
+            <p class="text-center text-body-secondary"><i class="fa fa-user me-1" aria-hidden="true"></i>Aiello Giuseppe
+                4DI a.s. 2022/23</p>
             <p class="text-center text-body-secondary">giuseppe.2006@outlook.com</p>
         </div>
     </footer>
