--- a/secret.html
+++ b/secret.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
-    <title>INDEX</title>
+    <title>Riflessioni personali</title>
 </head>
 
 <body>
@@ -52,7 +52,7 @@
 
         <h1>Complimenti, hai i biscotti!<br>Ecco le mie riflessioni personali</h1>
 
-        <div class="content">
+        <div class="content paragraph">
             <h3>Obsolescenza informatica:</h3>
             <p>
                 Spesso siamo attratti dalle nuove tecnologie e ci sentiamo costretti a sostituire i
@@ -62,7 +62,7 @@
                 possibile, non per risparmiare denaro, ma per ridurre l'impatto sulla natura.
             </p>
         </div>
-        <div class="content">
+        <div class="content paragraph">
             <h3>Addestramento IA:</h3>
             <p>
                 Mi preoccupo sempre di più dell'impatto ambientale dell'addestramento delle IA. L'elaborazione dei dati
@@ -73,7 +73,7 @@
                 l'impatto ambientale dell'addestramento delle IA, visto che al giorno d'oggi diventano sempre più usate.
             </p>
         </div>
-        <div class="content">
+        <div class="content paragraph">
             <h3>Riciclo dell'hardware:</h3>
             <p>
                 Il riciclo dell'hardware è un modo importante per ridurre l'impatto ambientale dei nostri consumi
