--- a/obsolescenza.html
+++ b/obsolescenza.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
-    <title>INDEX</title>
+    <title>Obsolescenza informatica</title>
 </head>
 
 <body>
