--- a/room1.html
+++ b/room1.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Game</title>
+    <title>Livello 1</title>
 </head>
 
 <body>
